--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -22,3 +22,14 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+# ===== ENV FILES =====
+.env
+.env.*
+
+# Frontend
+frontend/.env
+frontend/.env.*
+
+# Backend
+backend/.env
+backend/.env.*
