--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "express": "^5.2.1",
     "form-data": "^4.0.0",
     "google-auth-library": "^10.5.0",
+    "googleapis": "^169.0.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.1",
     "multer": "^2.0.2",
